# deepfakery

./: .gitignore  README.md  deepfake.py  deepfakery.py  pyproject.toml  requirements.txt
deepfakery/: __init__.py  deepfakery.py
