[project]
name = "deepfakery"
version = "1.2.0"
description = "Terminal-based image and video deepfake generator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "insightface>=0.7.3",
    "numpy>=1.24.4",
    "onnxruntime>=1.20.1",
    "opencv-python>=4.11.0.86",
]

[project.scripts]
deepfakery = "deepfakery.deepfakery:main"

[tool.setuptools]
packages = ["deepfakery"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
